# slrn

./: COPYRIGHT  INSTALL  INSTALL.txt  Makefile.am  NEWS  README  acconfig.h  autogen.sh  changes.txt  configure  configure.in
autoconf/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure.ac
autoconf/include/: gettext.m4  iconv.m4  lib-link.m4  nls.m4  po.m4  progtest.m4
contrib/: NEWS.cleanscore  README.cleanscore  README.slrnrc-conv  cleanscore  slrnrc-conv
doc/: FAQ  FIRST_STEPS  INSTALL.os2  INSTALL.unix  INSTALL.vms  INSTALL.w32  INSTFILES  Makefile.am  README.GroupLens  README.SSL  README.macros  README.multiuser  SCORE_FAQ  THANKS  VMS-SLRN.HLP  help.txt  manual.txt  pc-keys.txt  score.sl  score.txt  slrn-doc.html  slrn.1  slrn.rc  slrnfuns.txt  slrnpull.1
doc/slrnpull/: FAQ  README  README.offline  SETUP  score  setgid.txt  slrn.rc  slrnpull.conf  slrnpull.sh
doc/tm/: Makefile  Makefile.am  README  slrnfuns.tm
doc/tm/slrnfuns/: article.tm  dialog.tm  file.tm  group.tm  header.tm  hooks.tm  keys.tm  misc.tm  tm-sort.sl  whatelse.sl
macros/: INSTFILES  color.sl  gsort.sl  ispell.sl  latin2.sl  mailcap.sl  mime.sl  multipart.sl  nn.sl  posthook.sl  search.sl  slrn.sl  tin-art.sl  tin-group.sl  ttyprint.sl  util.sl  varset.sl  xcomment.sl
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  be.gmo  be.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  gen-potable  it.gmo  it.po  ko.gmo  ko.po  mkversion.sh  nl.gmo  nl.po  pl.gmo  pl.po  ru.gmo  ru.po  slrn.pot  sv.gmo  sv.po  tr.gmo  tr.po
src/: DESCRIP.MMS  Makefile.am  Makefile.g32  Makefile.in  Makefile.os2  Makefile.w32  VMSMAKE.COM  art.c  art.h  art_misc.c  art_sort.c  art_sort.h  charmaps.h  charset.c  charset.h  chkslang.c  chmap.c  chmap.h  clientlib.h  common.h  config.h.bot  config.h.in  config.hin  decode.c  decode.h  editscore.c  group.c  group.h  grplens.c  grplens.h  hash.c  hash.h  hdrutils.c  hdrutils.h  help.c  help.h  hooks.c  hooks.h  interp.c  interp.h  (+57 more)
src/win32/: README  makefile.m32in  slrnfeat.def  subst.sl
win32/: README  m32config.sl  m32install.sl  makefile.m32in  setpath.bat  subst.sl
